# ratkomo_ifrs_deep

./: .coverage  .coveragerc  .env.example  .gitignore  README.md  analyze_document.py  pyproject.toml  pytest.ini  requirements.txt  run_analysis.py  run_tests.sh  setup.py
data/: annual_report_2023.txt
docs/: architecture.md  chain_of_agents_paper.md  chain_of_agents_paper_formatted.md  paper_complete.md  paper_full.md  pdf_processor_improvements.md  technical_design.md  technical_spec.md
flows/: ifrs_analysis.json
output/: analysis_report.md  analyysi_raportti.md  analyysi_raportti_v2.md  annual_report_2023.md  annual_report_2023_v2.md  annual_report_2023_v3.md
scripts/: analyze_ifrs_report.py  enhanced_pdf_to_md.py  pdf_extractor.py  pdf_to_md.py  process_annual_report.py  process_report.py
src/: document_analyzer.py  document_analyzer_finnish.py  document_analyzer_new.py  document_analyzer_optimized.py  run_analysis_finnish.py  run_analysis_optimized.py  run_ifrs_analysis.py  run_ifrs_orchestrator.py
src/agents/: base.py  chain_of_agents.py  communication.py  ifrs_manager_agent.py  ifrs_worker_agent.py  manager_agent.py  worker_agent.py
src/config/: llm_config.py  tracing_config.py
src/models/: ifrs_models.py  openrouter_model.py  openrouter_pydantic_model.py  run_context.py
test_data/: sample.txt
test_output/: ifrs_analysis_20250222_233501.json  ifrs_analysis_20250222_233917.json  ifrs_analysis_20250222_233917.md
tests/: README.md  create_test_pdf.py  requirements-test.txt  test_agent_analysis.py  test_document_processing.py
(+12 files in other folders)
