[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "ifrs-document-analysis"
version = "0.1.0"
description = "IFRS Document Analysis Framework using Chain of Agents"
requires-python = ">=3.8"
authors = [
    {name = "Ratkomo"}
]
dependencies = [
    "pydantic>=1.9.0,<2.0.0",
    "langchain>=0.0.176,<0.0.177",
    "langflow>=0.0.78,<0.0.79",
    "pytest>=7.0.0",
    "pytest-asyncio>=0.21.0",
    "pytest-cov>=4.1.0",
    "pytest-mock>=3.12.0",
    "pytest-env>=1.0.1",
    "pytest-xdist>=3.3.1",
    "pytest-timeout>=2.2.0",
    "coverage>=7.3.2",
]

[project.optional-dependencies]
dev = [
    "pytest",
    "pytest-asyncio",
    "pytest-cov",
    "pytest-mock",
    "pytest-env",
    "pytest-xdist",
    "pytest-timeout",
    "coverage",
]

[tool.setuptools]
packages = ["src"]
